# kitchen

./: .coverage  .env.example  .gitignore  .kilocodemodes  .markdownlint.json  .mise.toml  .tool-versions  AGENTS.md  LSP_DEMO.md  OPEN_QUESTIONS.md  Procfile.dev  README.md  just  justfile  main.py  manual_test_report.md  package-lock.json  package.json  pyproject.toml  test.ts  todo.txt  tsconfig.json
.claude/skills/: full-qa-cycle.md  project-setup.md  recipe-scraping.md
.gemini/: settings.json
.kilocode/: README.md  config.md  modes.json  response-style.md  rules.md
.kilocode/modes/: index.md  planning.md
.kilocode/progress/: 2025-09.md
.kilocode/rules/: auto-approver.md  directory-usage.md  documentation.md  git-workflow.md  index.md  library  library-instructions.md  markdown-docs.md  mobile-first.md  progress-log.md  project-structure.md  recipe-scraping.md  response-style.md  rules.md  tdd-practices.md  tech-design.md  tech-stack.md  todo-list-usage.md  triage.md
context/: db-research.md  index.md
docs/: MANUAL-QA-TESTING-GUIDE.md  README.md  db-research.md  development.md  index.md  jail-stack.md  phase0-workflow.md
docs/architecture/: README.md  design-system.md  planning-algorithm-and-ux.md  ux-flow.md
docs/guides/: README.md  authentication-setup.md  data-loading.md  hosting-synology.md  mobile-testing.md  pdf-recipe-rendering.md  testing-strategy.md  voice-assistant-setup.md
docs/obsolete/: README.md
docs/plans/: 2026-02-17_round7_feedback.md  central-plan.md  design-system.md  development-todo.md  e2e-test-plan.md  execution-roadmap.md  frontend-redesign.md  hosting.md  (+25 more)
plans/: brief.md  design-system.md  development-todo.md  hosting.md  index.md  planning-mode.md  project-phases.md  ux-flow.md
scratch/: commit.txt  llm-prompt-proposal.md
scripts/: fix_md_blocks.py  generate_supabase_keys.py  jail-stack.sh  lint_mermaid.py  render_recipe.py  seed_dev_data.py  setup-weasyprint-env.sh  setup_env.sh
src/: __init__.py
(+443 files in other folders)
