[project]
name = "kitchen"
version = "0.1.0"
description = "AI-powered kitchen management - meal planning, inventory tracking, and smart shopping ðŸ³"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # PDF Generation (Phase 0)
    "weasyprint>=67.0",
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    # Configuration
    "pydantic-settings>=2.7.0",
    # Database
    "supabase>=2.12.0",
    # Logging
    "structlog>=25.1.0",
    # LLM Providers (D6: Multi-Adapter)
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
    # Utilities
    "httpx>=0.28.0",
    "pint>=0.24.0",  # Phase 2: Unit conversions
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = ["E501", "B008", "ARG002"]  # ARG002: unused args OK for stubs/interfaces

[tool.ruff.lint.isort]
known-first-party = ["src"]


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "hypothesis>=6.0.0",  # Property-based testing for Phase 3
    "ruff>=0.14.11",
    "httpx>=0.28.0",  # For testing FastAPI
]
